@@ -40,12 +40,12 @@ body {font-family:'Open Sans', sans-serif; font-size:0.9em; color:#333; line-hei
 
 
 /* HEADINGS */
-h1 {font-size:2.25em; line-height:1.5em;}
-h2 {font-size:2.0em; line-height:2em;}
-h3 {font-size:1.75em; line-height:2em;}
-h4 {font-size:1.5em; line-height:2em;}
-h5 {font-size:1.25em; line-height:2.5em;}
-h6 {font-size:1.0em; line-height:2.5em;}
+h1 {font-size:2.25em; line-height:1.25em;}
+h2 {font-size:1.80em; line-height:1.25em;}
+h3 {font-size:1.45em; line-height:1.5em;}
+h4 {font-size:1.20em; line-height:1.5em;}
+h5 {font-size:1em; line-height:1.5em;}
+h6 {font-size:0.80em; line-height:2em;}
 
 
 /* LINKS AND HTML TAGS */
@@ -53,8 +53,8 @@ a {text-decoration:none; color:#08a0ff;}
 a:hover {text-decoration:underline;}
 
 strong, b {font-weight:bold;}
-small {font-size:0.75em;}
-big {font-size:1.25em;}
+small {font-size:0.80em;}
+big {font-size:1.20em;}
 sub {vertical-align:sub; font-size:0.9em;}
 sup {vertical-align:super; font-size:0.9em;}
 ins, mark {font-weight:bold; background:none; text-decoration:none; color:#08a0ff;}
