@@ -1,11 +1,11 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 3.9
+Version: 4.0
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, widget areas on homepage, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description, full width page template, dropdown navigation. Enjoy. 
-Tags: one-column, two-columns, right-sidebar, fixed-layout, responsive-layout, full-width-template, custom-background, custom-header, custom-menu, featured-images, post-formats, blue, gray, editor-style, translation-ready
+Tags: one-column, two-columns, right-sidebar, full-width-template, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, editor-style, translation-ready
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: myknowledgebase
@@ -78,12 +78,12 @@ body {background:#fff; font-family:'Open Sans', sans-serif; font-size:0.9em; col
 
 
 /* HEADINGS */
-h1 {font-size:2.25em; line-height:1.5em;}
-h2 {font-size:2.0em; line-height:2em;}
-h3 {font-size:1.75em; line-height:2em;}
-h4 {font-size:1.5em; line-height:2em;}
-h5 {font-size:1.25em; line-height:2.5em;}
-h6 {font-size:1.0em; line-height:2.5em;}
+h1 {font-size:2.25em; line-height:1.25em;}
+h2 {font-size:1.80em; line-height:1.25em;}
+h3 {font-size:1.45em; line-height:1.5em;}
+h4 {font-size:1.20em; line-height:1.5em;}
+h5 {font-size:1em; line-height:1.5em;}
+h6 {font-size:0.80em; line-height:2em;}
 
 
 /* LINKS AND HTML TAGS */
@@ -91,8 +91,8 @@ a {text-decoration:none; color:#08a0ff;}
 a:hover {text-decoration:underline;}
 
 strong, b {font-weight:bold;}
-small {font-size:0.75em;}
-big {font-size:1.25em;}
+small {font-size:0.80em;}
+big {font-size:1.20em;}
 sub {vertical-align:sub; font-size:0.9em;}
 sup {vertical-align:super; font-size:0.9em;}
 ins, mark {font-weight:bold; background:none; text-decoration:none; color:#08a0ff;}
@@ -133,7 +133,7 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 /* HEADER FIRST LOGO */
 #header-first .logo {width:35%; float:left;}
 #header-first .logo h1 a:hover {text-decoration:none; color:#333;}
-#header-first .logo h2 {padding:0 0 10px; font-style:italic; font-size:1.25em; line-height:1.5em;}
+#header-first .logo h2 {padding:0 0 10px; font-style:italic; font-size:1.25em;}
 #header-first .logo img {padding:0 0 10px;}
 
 
@@ -182,7 +182,7 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 /* HEADER THIRD SEARCH BAR */
 #header-third .search-form {width:50%; float:right; text-align:right;} 
-#header-third .searchbar-title {width:50%; float:left; color:#fff; margin:8px 0 0; font-size:1.5em; line-height:1.5em;}
+#header-third .searchbar-title {width:50%; float:left; color:#fff; margin:8px 0 0;}
 
 
 /* HEADER THIRD SEARCH BAR INPUTS */
@@ -209,17 +209,17 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 
 /* PAGE */
-.page-title {clear:both; padding:0 0 10px; line-height:1.5em;}
+.page-title {clear:both; padding:0 0 10px;}
 .archive-description {display:block; font-style:italic;}
 .pagelink {clear:both; display:block; margin:20px 0 10px;}
 
 
 /* POST */
 .post-list {width:100%; clear:both; float:left;}
-.post-title {clear:both; line-height:1.5em;}
+.post-title {clear:both;}
 .post-title a:hover {color:#333; text-decoration:none;}
-.post-title-single {clear:both; line-height:1.5em;}
-.sticky-title {clear:both; display:block; text-align:center; margin:10px 0 0; padding:2px 0; border-top:1px solid #eee; border-bottom:1px solid #eee; line-height:1.5em;}
+.post-title-single {clear:both;}
+.sticky-title {clear:both; display:block; text-align:center; margin:10px 0 0; padding:2px 0; border-top:1px solid #eee; border-bottom:1px solid #eee;}
 .postmetadata {clear:both; display:block; margin:20px 0; padding:5px 10px; background:#f8f8f8; border:1px solid #eee;}
 .more {width:100%; clear:both; display:block; float:left; margin:20px 0; padding:0 0 20px; border-bottom:1px solid #eee;}
 a.readmore {float:right; padding:2px 10px; background:#08a0ff; color:#fff; text-decoration:none;}
@@ -227,8 +227,8 @@ a.readmore:hover {background:#333; text-decoration:none;}
 
 
 /* POST FORMATS */
-.format-aside .post-title, .format-status .post-title, .format-image .post-title, .format-video .post-title, .format-gallery .post-title, .format-audio .post-title {font-size:1.5em;}
-.format-aside .post-title-single, .format-status .post-title-single, .format-image .post-title-single, .format-video .post-title-single, .format-gallery .post-title-single, .format-audio .post-title-single {font-size:1.5em;}
+.format-aside .post-title, .format-status .post-title, .format-image .post-title, .format-video .post-title, .format-gallery .post-title, .format-audio .post-title {font-size:1.45em;}
+.format-aside .post-title-single, .format-status .post-title-single, .format-image .post-title-single, .format-video .post-title-single, .format-gallery .post-title-single, .format-audio .post-title-single {font-size:1.45em;}
 .format-image .postmetadata, .format-video .postmetadata, .format-gallery .postmetadata, .format-audio .postmetadata {font-style:italic;}
 .format-status .avatar {width:96px; float:left; margin:0.4em 1em 0.4em 0;}
 
@@ -296,7 +296,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* SIDEBAR AND WIDGETS */
 #sidebar {width:33%; float:right; padding:20px 0 0;}
 .widget {padding:0 0 10px; margin:0 0 20px; border-bottom:1px solid #eee;}
-.widgettitle {margin:0 0 10px; font-size:1.5em; line-height:1.5em;}
+.widgettitle {margin:0 0 10px;}
 
 
 /* FOOTER */
@@ -364,7 +364,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 	/* HEADINGS */
 	.post-title, .page-title, .post-title-single {font-size:1.75em;}
-	.widgettitle, .searchbar-title, .comments-title, .comment-reply-title, .no-comments {font-size:1.5em;}
+	.widgettitle, .searchbar-title, .comments-title, .comment-reply-title, .no-comments {font-size:1.45em;}
 
 	/* IMAGES */
 	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
